# learn-fastapi

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
lesson1/: .gitpod.yml  Makefile  README.md  docker-compose.yml  pyproject.toml
lesson1/app/: config.py  db.py  main.py
lesson1/config/: yoyo.ini
lesson1/config/dev/: .env.dev  yoyo.ini
lesson1/config/dev/migrations/: fastapi_202307090836.sql
lesson1/config/migrations/: fastapi_202307090822.sql
lesson1/db/: Dockerfile  run.sh
lesson1/tests/: conftest.py  ping_test.py
lesson1/tests/reports/: output.json  pytest_html_report.html
