[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = "FastAPI starter project"
authors = ["mooreisenough <mooreisenough@netscape.net>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = {extras = ["all"], version = "^0.100.0"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.193.1"}
asyncpg = "^0.27.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
parameterized = "^0.9.0"
fastapi-limiter = "^0.1.5"
circuitbreaker = "^2.0.0"
psycopg2 = "^2.9.6"
pydantic-settings = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-order = "^1.1.0"
httpx = "^0.24.1"
pytest-bdd = "^6.1.1"
pytest-html-reporter = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
